--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,19 +27,13 @@ jobs:
           cache-dependency-path: 'package-lock.json'
 
       - name: 📦 Install dependencies
-        run: |
-          cd backoffice
-          npm ci
+        run: npm ci
 
       - name: 🛠️ Build Next.js app
-        run: |
-          cd backoffice
-          npm run build
+        run: npm run build
 
       - name: 🗜️ Create deployment archive
-        run: |
-          cd backoffice
-          tar -czf backoffice-deploy.tar.gz .next/ package*.json public/ src/ next.config.ts tsconfig.json
+        run: tar -czf backoffice-deploy.tar.gz .next/ package*.json public/ src/ next.config.ts tsconfig.json
 
       - name: 📤 Upload files to VPS
         uses: appleboy/scp-action@v0.1.4
@@ -48,7 +42,7 @@ jobs:
           username: ${{ env.VPS_USER }}
           key: ${{ env.VPS_SSH_KEY }}
           port: ${{ env.VPS_PORT }}
-          source: "backoffice/backoffice-deploy.tar.gz"
+          source: "backoffice-deploy.tar.gz"
           target: "/tmp/"
 
       - name: 🚀 Deploy to VPS
