--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,9 @@ jobs:
         run: npm ci
 
       - name: 🛠️ Build Next.js app
-        run: npm run build
+        run: |
+          echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" > .env.local
+          npm run build
 
       - name: 🗜️ Create deployment archive
         run: tar -czf backoffice-deploy.tar.gz .next/ package*.json public/ src/ next.config.ts tsconfig.json
